--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 project(line)
 find_package(OpenCV REQUIRED)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable( line line.cpp )
-target_link_libraries( line ${OpenCV_LIBS} )
+add_library( player player.cpp )
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries( line player ${OpenCV_LIBS} )
