--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable( line line.cpp )
 add_library( player player.cpp )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
+add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1)
 target_link_libraries( line player ${OpenCV_LIBS} )
