Split up in several classes to simplify.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,11 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable( line line.cpp )
-add_library( player player.cpp )
+add_library( utility utility.cpp )
+add_library( Frameplayer frameplayer.cpp )
+add_library( Vision vision.cpp )
 add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
 add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1)
-target_link_libraries( line player ${OpenCV_LIBS} QTRSensors SimpleGPIO )
+target_link_libraries( Vision Frameplayer )
+target_link_libraries( line Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility)
