Started adding Firmata serial support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,10 @@ add_executable( main main.cpp )
 add_library( utility utility.cpp )
 add_library( Frameplayer frameplayer.cpp )
 add_library( Vision vision.cpp )
-add_library( Arduinocomm arduinocomm.cpp )
+add_library( Firmata Firmata.cpp )
 add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
 add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1)
-target_link_libraries( Arduinocomm ${OpenCV_LIBS} serial )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 serial )
+target_link_libraries( Firmata ${OpenCV_LIBS} serial )
 target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} )
-target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility Arduinocomm)
+target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility serial Firmata )
