--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -o3 -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -std=c++11 -Wall -Wextra -pedantic")
 add_executable( main main.cpp )
+add_library( arduinocomm arduinocomm.cpp )
 add_library( utility utility.cpp )
 add_library( Frameplayer frameplayer.cpp )
 add_library( Vision vision.cpp )
-add_library( Firmata Firmata.cpp )
 add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
 add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 serial )
-target_link_libraries( Firmata ${OpenCV_LIBS} serial )
 target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} )
-target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility serial Firmata )
+target_link_libraries( arduinocomm serial )
+target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility serial arduinocomm )
