--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,10 @@ add_library( Frameplayer frameplayer.cpp )
 add_library( Vision vision.cpp )
 add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
 add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
+add_library( Controller controller.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 )
 target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} )
 target_link_libraries( wserial rt )
 target_link_libraries( arduinocomm wserial )
-target_link_libraries( main Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility arduinocomm wserial )
+target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility arduinocomm wserial )
+target_link_libraries( main Controller )
