--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,13 +17,19 @@ add_library( Vision vision.cpp )
 add_library( QTRSensors QTRSensors-JetsonTk1/QTRSensors.cpp )
 add_library( SimpleGPIO SimpleGPIO/SimpleGPIO.cpp )
 add_library( Controller controller.cpp )
-add_library ( gyroscope gyroscope.cpp )
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink )
+add_library ( gyroscope gyroscope/gyroscope.cpp )
+add_library( encoder encoder/encoder.cpp )
+add_library( drive drive/drive.cpp )
+add_library( pid pid/PID_v1.cpp )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO QTRSensors-JetsonTk1 ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid)
 find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
+
+target_link_libraries( drive pid encoder )
+target_link_libraries( encoder SimpleGPIO )
 target_link_libraries( ps4eye ${libusb} )
 target_link_libraries( ps4driver ${libusb} ps4eye )
 target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} ps4driver )
 target_link_libraries( wserial rt )
 target_link_libraries( arduinocomm wserial )
-target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility arduinocomm wserial gyroscope )
-target_link_libraries( main Controller )
+target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} QTRSensors SimpleGPIO Vision utility arduinocomm wserial gyroscope drive )
+target_link_libraries( main Controller encoder drive )
