--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
 
 add_executable( main main.cpp )
+add_library( linefollower bachelor-line.cpp )
 add_library( ping ping.cpp )
 add_library( ps4driver ps4jetson/driver/src/ps4driver.cpp )
 add_library( ps4eye ps4jetson/driver/src/ps4eye.cpp )
@@ -27,7 +28,7 @@ add_library( pid pid/PID_v1.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid)
 find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
 
-target_link_libraries( main Controller encoder drive )
+target_link_libraries( main Controller encoder drive linefollower )
 target_link_libraries( drive pid encoder ping )
 target_link_libraries( encoder SimpleGPIO )
 target_link_libraries( ps4eye ${libusb} utility )
