--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 project(Robot)
 find_package(OpenCV REQUIRED)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib)
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -o3 -std=c++11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -pedantic -pg")
 SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
@@ -25,9 +25,9 @@ add_library ( gyroscope gyroscope/gyroscope.cpp )
 add_library( encoder encoder/encoder.cpp )
 add_library( drive drive/drive.cpp )
 add_library( pid pid/PID_v1.cpp )
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR} SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid)
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid )
 find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
-
+find_library( gtest PATHS lib )
 target_link_libraries( main Controller encoder drive linefollower )
 target_link_libraries( drive pid encoder ping )
 target_link_libraries( encoder SimpleGPIO )
