--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
 
 add_executable( main main.cpp )
-add_executable( test tests/main.cpp )
+add_executable( tests tests/main.cpp )
 add_library( linefollower bachelor-line.cpp )
 add_library( ping ping.cpp )
 add_library( ps4driver ps4jetson/driver/src/ps4driver.cpp )
@@ -28,8 +28,10 @@ add_library( drive drive/drive.cpp )
 add_library( pid pid/PID_v1.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid lib)
 find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
-find_library( gtest NAMES gtest)
+find_library( gtest NAMES gtest PATHS lib/.libs)
+MESSAGE( STATUS "gtest " ${gtest} )
 find_library( gmock NAMES gmock PATHS lib)
+MESSAGE( STATUS "gmock " ${gmock} )
 
 target_link_libraries( main Controller encoder drive linefollower )
 target_link_libraries( drive pid encoder ping gyroscope arduinocomm )
@@ -40,4 +42,4 @@ target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} ps4driver utility)
 target_link_libraries( wserial rt )
 target_link_libraries( arduinocomm wserial utility )
 target_link_libraries( Controller Frameplayer ${OpenCV_LIBS} SimpleGPIO Vision utility arduinocomm wserial gyroscope drive linefollower )
-target_link_libraries( test ${gtest} linefollower drive utility ${gmock} )
+target_link_libraries( tests ${gtest} linefollower drive utility ${gmock} )
