--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,13 +30,13 @@ add_library( encoder encoder/encoder.cpp )
 add_library( drive drive/drive.cpp )
 add_library( pid pid/PID_v1.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid lib)
-find_library( libusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs )
+find_library( lusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs NO_DEFAULT_PATH NO_CMAKE_ENVIRONMENT_PATH NO_SYSTEM_ENVIRONMENT_PATH NO_CMAKE_SYSTEM_PATH)
 
 target_link_libraries( main Controller encoder drive linefollower )
 target_link_libraries( drive pid encoder ping gyroscope arduinocomm )
 target_link_libraries( encoder SimpleGPIO )
-target_link_libraries( ps4eye ${libusb} utility )
-target_link_libraries( ps4driver ${libusb} ps4eye )
+target_link_libraries( ps4eye ${lusb} utility )
+target_link_libraries( ps4driver ${lusb} ps4eye )
 target_link_libraries( Vision Frameplayer ${OpenCV_LIBS} ps4driver utility)
 target_link_libraries( wserial rt )
 target_link_libraries( arduinocomm wserial utility )
