--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,12 @@ add_library( gyroscope gyroscope/gyroscope.cpp )
 add_library( encoder encoder/encoder.cpp )
 add_library( drive drive/drive.cpp )
 add_library( pid pid/PID_v1.cpp )
+add_library( camshift camshift.cpp )
+add_library( find_lines find_lines.cpp )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/include SimpleGPIO ps4jetson/driver/include ps4jetson/driver/src ps4jetson/libusb/libusb mavlink encoder gyroscope drive pid lib)
 find_library( lusb NAMES usb-1.0 PATHS ps4jetson/libusb/libusb/.libs NO_DEFAULT_PATH NO_CMAKE_ENVIRONMENT_PATH NO_SYSTEM_ENVIRONMENT_PATH NO_CMAKE_SYSTEM_PATH)
 
-target_link_libraries( main Controller encoder drive linefollower )
+target_link_libraries( main Controller encoder drive linefollower camshift find_lines )
 target_link_libraries( drive pid encoder ping gyroscope arduinocomm )
 target_link_libraries( encoder SimpleGPIO )
 target_link_libraries( ps4eye ${lusb} utility )
